--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Socks",
-  "version_number": "0.1.99",
+  "version_number": "0.2.0",
   "website_url": "https://github.com/binury/Toes.Socks",
-  "description": "Socks is an evolving (work-in-progress) library to facilitate joy in Webfishing mod development",
-  "dependencies": ["toes-NoNameFix-0.0.1"]
+  "description": "Socks is a library to facilitate joy in Webfishing mod development",
+  "dependencies": ["toes-NoNameFix-1.0.0"]
 }
