--- a/mods/Toes.Socks/manifest.json
+++ b/mods/Toes.Socks/manifest.json
@@ -5,8 +5,8 @@
   "Metadata": {
     "Name": "Socks",
     "Author": "Toes",
-    "Version": "0.4.0",
-    "Description": "Socks is a library to facilitate joy in Webfishing mod development",
+    "Version": "0.5.1",
+    "Description": "Socks is the best actively-developed library for Webfishing modders!",
     "Homepage": "https://github.com/binury/Toes.Socks"
   }
 }
