--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Socks",
-  "version_number": "0.4.0",
+  "version_number": "0.5.1",
   "website_url": "https://github.com/binury/Toes.Socks",
-  "description": "Socks is a library to facilitate joy in Webfishing mod development",
+  "description": "",
   "dependencies": ["toes-NoNameFix-1.0.0"]
 }
