--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://mods/Toes.Socks/icon.png", "res://mods/Toes.Socks/main.gd", "res://mods/Toes.Socks/modules/Socks.Chat/main.gd", "res://mods/Toes.Socks/modules/Socks.Players/main.gd", "res://mods/Toes.Socks/modules/Socks.Utils/main.gd" )
+export_files=PoolStringArray( "res://mods/Toes.Socks/icon.png", "res://mods/Toes.Socks/main.gd", "res://mods/Toes.Socks/modules/Socks.Chat/main.gd", "res://mods/Toes.Socks/modules/Socks.Hotkeys/hotkey_config.gd", "res://mods/Toes.Socks/modules/Socks.Hotkeys/hotkeys.gd", "res://mods/Toes.Socks/modules/Socks.Hotkeys/menu_hotkey_picker.tscn", "res://mods/Toes.Socks/modules/Socks.Hotkeys/menu_hotkey_picker_button.gd", "res://mods/Toes.Socks/modules/Socks.Players/main.gd", "res://mods/Toes.Socks/modules/Socks.Utils/main.gd" )
 include_filter=""
 exclude_filter=""
 export_path=""
