--- a/mods/Toes.Socks/manifest.json
+++ b/mods/Toes.Socks/manifest.json
@@ -5,8 +5,8 @@
   "Metadata": {
     "Name": "Socks",
     "Author": "Toes",
-    "Version": "0.5.1",
-    "Description": "Socks is the best actively-developed library for Webfishing modders!",
+    "Version": "0.999.0",
+    "Description": "Socks is the best actively-developed library for building mods!",
     "Homepage": "https://github.com/binury/Toes.Socks"
   }
 }
